remove test scope guava dependency